# agentic-ai-journey

./: Week1.md  basic_qa_agent.py  pyproject.toml
