[project]
name = "agentic-ai-journey"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "openai (>=1.88.0,<2.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "faiss-cpu (>=1.11.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
