[project]
name = "agentic-ai-journey"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "openai (>=1.88.0,<2.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "faiss-cpu (>=1.11.0,<2.0.0)",
    "pypdf (>=5.6.0,<6.0.0)",
    "langchain-community (>=0.3.25,<0.4.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "langchain-openai (>=0.3.24,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
